[API] Added metadata information to dataset summaries
Added testcases for external dataset workflow
